--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 		"start": "node myApp.js"
 	},
 	"dependencies": {
-		"express": "^4.14.0",
-		"helmet": "3.21.3"
+		"express": "^4.21.0",
+		"helmet": "3.21.3",
+		"yarn": "^1.22.22"
 	},
 	"keywords": [
 		"node",
